--- a/portalex.html
+++ b/portalex.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="container">
+    <img src="imagens/alexperfil.JPG">
     <h1>Alex Costa</h1>
     <p>Telefone: +55 79 9946-5913</p>
     <p>Email: alexcosta@gmail.com</p>
