--- a/portpedro.html
+++ b/portpedro.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <img src="imagens/pedroperfil.jpeg">
         <header>
             <h1>Pedro Menezes</h1>
             <p>Data de Nascimento -
